First german translation

--- a/po/Makefile
+++ b/po/Makefile
@@ -82,6 +82,9 @@ POTFILES = \
 	../src/miscFilter.c \
 	../src/dialogSupport.c \
 	../src/responsePlot.c \
+	../src/linFirDesignDlg.c \
+	../src/linFirFilter.c \
+	../src/rootsPlot.c \
 
 CATALOGS =  de.gmo
 CATOBJEXT = .gmo
@@ -116,7 +119,7 @@ all-no:
 
 $(srcdir)/$(GETTEXT_PACKAGE).pot: $(POTFILES)
 	$(XGETTEXT) --default-domain=$(GETTEXT_PACKAGE) --directory=$(top_srcdir) \
-	  --add-comments --keyword=_ --keyword=N_ \
+	  --from-code=utf-8 --add-comments --keyword=_ --keyword=N_ \
           --flag=g_strdup_printf:1:c-format \
           --flag=g_string_printf:2:c-format \
           --flag=g_string_append_printf:2:c-format \
