--- a/Makefile.in
+++ b/Makefile.in
@@ -212,7 +212,7 @@ sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
-SUBDIRS = po include src data doc
+SUBDIRS = po include src pixmaps data doc
 dfcgen_gtkdocdir = ${prefix}/doc/dfcgen-gtk
 dfcgen_gtkdoc_DATA = \
 	README\
