--- a/pixmaps/Makefile
+++ b/pixmaps/Makefile
@@ -196,7 +196,8 @@ dfcgen_gtk_pixmaps_DATA = \
 	impulse.png\
 	phase.png\
 	phasedelay.png\
-	step.png
+	step.png\
+	amplitude.png
 
 EXTRA_DIST = $(dfcgen_gtk_pixmaps_DATA)
 all: all-am
