--- a/config.h.in
+++ b/config.h.in
@@ -101,6 +101,9 @@
 /* Define to the address where bug reports for this package should be sent. */
 #undef PACKAGE_BUGREPORT
 
+/* package icon */
+#undef PACKAGE_ICON
+
 /* Package local directory */
 #undef PACKAGE_LOCALE_DIR
 
