PACKAGE_DATA_DIR and PACKAGE_DOC_DIR corrected

--- a/Makefile.in
+++ b/Makefile.in
@@ -213,16 +213,8 @@ sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 SUBDIRS = po include src pixmaps data doc
-dfcgen_gtkdocdir = ${prefix}/doc/dfcgen-gtk
-dfcgen_gtkdoc_DATA = \
-	README\
-	COPYING\
-	AUTHORS\
-	ChangeLog\
-	INSTALL\
-	NEWS\
-	TODO
-
+dfcgen_gtkdocdir = ${prefix}/share/gtk-doc/dfcgen-gtk
+dfcgen_gtkdoc_DATA = 
 EXTRA_DIST = $(dfcgen_gtkdoc_DATA)
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-recursive
