--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,8 +1,5 @@
 # List of source files containing translatable strings.
-
-## Created by Anjuta - will be overwritten
-## If you don't want it to overwrite it,
-## 	Please disable it in the Anjuta project configuration
+# Copyright (C) 2006, 2011 Ralf Hoppe <ralf.hoppe@ieee.org>
 
 # Source files
 src/support.c
