predefined filters moved into a subdirectory

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -1,23 +1,11 @@
 ## -*- Makefile -*-
 ##
-## Copyright (c) 2006, 2011 Ralf Hoppe <ralf.hoppe@ieee.org>
+## Copyright (C) 2006, 2011-2012 Ralf Hoppe <ralf.hoppe@ieee.org>
 ##
 ## Version:  $Id$
 ##
 ## Process this file with automake to produce Makefile.in
 ##
 
-dist_pkgdata_DATA = \
-	differentiator1.dfc\
-	differentiator2.dfc\
-	integrator_38rule.dfc\
-	integrator_rect.dfc\
-	integrator_simpson.dfc\
-	integrator_trapez.dfc\
-	fitting15_poly2.dfc\
-	fitting21_poly2.dfc\
-	fitting5_poly2.dfc\
-	fitting7_poly2.dfc\
-	fitting7_poly4.dfc\
-	fitting9_poly2.dfc\
-	fitting9_poly4.dfc
+SUBDIRS = filters templates
+
