Pixmaps moved to sub-directory data/pixmaps.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 ## -*- Makefile -*-
 ##
-## Copyright (C) 2006, 2011, 2012 Ralf Hoppe <ralf.hoppe@ieee.org>
+## Copyright (C) 2006, 2011-2012 Ralf Hoppe <ralf.hoppe@ieee.org>
 ##
 ## Version:  $Id$
 ##
@@ -9,7 +9,7 @@
 
 ACLOCAL_AMFLAGS = -I m4
 
-SUBDIRS = po include src pixmaps data doc
+SUBDIRS = po include src data doc
 
 doc_DATA = \
 	README\
