--- a/config.h.in
+++ b/config.h.in
@@ -1,5 +1,8 @@
 /* config.h.in.  Generated from configure.ac by autoheader.  */
 
+/* Defined if '--enable-debug' was passed to configure. */
+#undef DEBUG
+
 /* Define to 1 if translation of program messages to the user's native
    language is requested. */
 #undef ENABLE_NLS
@@ -93,6 +96,9 @@
 
 /* Define to the address where bug reports for this package should be sent. */
 #undef PACKAGE_BUGREPORT
+
+/* copyright holder */
+#undef PACKAGE_COPYRIGHT
 
 /* package icon */
 #undef PACKAGE_ICON
