--- a/configure.ac
+++ b/configure.ac
@@ -6,11 +6,11 @@ dnl Version:  $Id$
 dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
-dnl Note: This file uses pkg-config and associated M4 macro PKG_CHECK_MODULES().
-dnl       So it runs only on systems, where pkg-config is available, mostly all
-dnl       Linux distributions. On Ubuntu 10.04 LTS (Lucid Lynx) the version of
-dnl       Autoconf is 2.65 (AC_USE_SYSTEM_EXTENSIONS was introduced in v2.60).
+dnl Note: This file requires tool and library versions, which are provided
+dnl       first by Ubuntu 8.04 (Hardy).
+dnl
 
+dnl Autoconf requirements
 AC_PREREQ(2.65)
 
 dnl AC_INIT() defines: PACKAGE_NAME, PACKAGE_TARNAME, PACKAGE_VERSION,
@@ -91,31 +91,25 @@ AC_ARG_ENABLE([debug],
               ])
 
 
-
-dnl More substitutions on AC_OUPUT() into Makefile(s)
+dnl Additional Substitutions and Defines
 AC_SUBST(PACKAGE_AUTHOR, ["Ralf Hoppe"])
 AC_SUBST(COPYRIGHT_HOLDER, ["Copyright (C) 2006, 2011-2012 $PACKAGE_AUTHOR"])
-
-AC_SUBST(PACKAGE_PIXMAPS_DIR, [pixmaps])
-AC_SUBST(PACKAGE_FILTERS_DIR, [filters])
-AC_SUBST(PACKAGE_TEMPLATES_DIR, [templates])
-
-dnl Additional defines in config.h
 AC_DEFINE_UNQUOTED(PACKAGE_AUTHOR, ["$PACKAGE_AUTHOR"], [package author])
 AC_DEFINE_UNQUOTED(PACKAGE_COPYRIGHT, ["$COPYRIGHT_HOLDER"], [copyright holder])
 AC_DEFINE(PACKAGE_ICON, ["dfcgen.png"], [package icon])
 
-AC_DEFINE(PACKAGE_PIXMAPS_DIR, ["pixmaps"],
-          [Name of pixmaps sub-directory in PACKAGE_DATA_DIR.])
-AC_DEFINE(PACKAGE_FILTERS_DIR, ["filters"],
-          [Name of filters sub-directory in PACKAGE_DATA_DIR.])
-AC_DEFINE(PACKAGE_TEMPLATES_DIR, ["templates"],
-          [Name of templates sub-directory in PACKAGE_DATA_DIR.])
+dnl some installation directories
+pkgpixmapsdir='$(pkgdatadir)/pixmaps'
+pkgfiltersdir='$(pkgdatadir)/filters'
+pkgtemplatesdir='$(pkgdatadir)/templates'
+
+AC_SUBST(pkgpixmapsdir)
+AC_SUBST(pkgfiltersdir)
+AC_SUBST(pkgtemplatesdir)
 
 
 
 dnl Checks for programs (gcc)
-dnl LT_INIT
 AC_PROG_CC
 
 
@@ -123,6 +117,9 @@ dnl Define _GNU_SOURCE to enable header file extensions on GNU systems (macro
 dnl AC_GNU_SOURCE is obsolete). Notice the ordering: after ‘AC_PROG_CC’ but
 dnl before ‘AM_GNU_GETTEXT’, most likely very close to the ‘AC_PROG_CC’
 dnl invocation.
+dnl
+dnl This macro is available since Autoconf 2.60 (Ubuntu 8.04 distributes
+dnl Autoconf 2.61)
 AC_USE_SYSTEM_EXTENSIONS
 
 
@@ -138,30 +135,48 @@ AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [GETTEXT package name])
 dnl Instead of AM_GNU_GETTEXT also AM_GLIB_GNU_GETTEXT might be used, because
 dnl (from the man page of glib-gettextize): "glib-gettextize differs from
 dnl gettextize in that it doesn't create an intl/ subdirectory and doesn't
-dnl modify po/ChangeLog".  Note, that AM_GNU_GETTEXT([external]) has the same
+dnl modify po/ChangeLog". Note, that AM_GNU_GETTEXT([external]) has the same
 dnl effect - it disables any intl/ subdirectory handling. This seems
-dnl appropriate because libintl should be available on all Linux systems. For
-dnl details see the explanations on AM_GNU_GETTEXT() in the automake manual.
+dnl appropriate because libintl should be available on all GNU Linux systems.
+dnl For details see the explanations on AM_GNU_GETTEXT() in the gettext manual.
 AM_GNU_GETTEXT([external])
+AM_GNU_GETTEXT_VERSION(0.17)
 
 
-dnl pkg-config library checks (automated -I, -l/L switches generation and
-dnl PACKAGE_CFLAGS, PACKAGE_LIBS, PACKAGE_LDFLAGS variable creation)
-dnl
-dnl Note: The version numbers used here should match the numbers declared in
-dnl       Debian control file "./dist/debian/control".
-PKG_CHECK_MODULES(PACKAGE, [gtk+-2.0 >= 2.12 gdk-2.0 gsl >= 1.10])
-AC_SUBST([PACKAGE_CFLAGS])
-AC_SUBST([PACKAGE_LIBS])
+dnl Check for MinGW environment (do this after AC_PROG_CC)
+dnl install from http://sourceforge.net/projects/mingw/files/Installer/mingw-get-inst
+case "$host" in
+  *-mingw32*)
+     mingw_build=yes
+     AC_CHECK_TOOL(WINDRES, windres)
+    ;;
+  *)
+    mingw_build=no
+    ;;
+esac
+
+AC_MSG_CHECKING([for MinGW])
+AC_MSG_RESULT([$mingw_build])
+AM_CONDITIONAL(MINGW_BUILD, test x$mingw_build = xyes)
 
 
-dnl Check for libraries required by GSL, finally going into LIBS (see also
-dnl http://www.gnu.org/software/gsl/manual/html_node/Autoconf-Macros.html)
+dnl Check for libraries required by GSL, finally going into LIBS and LDFLAGS:
+dnl http://www.gnu.org/software/gsl/manual/html_node/Autoconf-Macros.html
 dnl
 dnl Note: Commented out because all work done by PKG_CHECK_MODULES()
+dnl
 dnl AC_CHECK_LIB([m],[main])
 dnl AC_CHECK_LIB([gslcblas],[main])
 dnl AC_CHECK_LIB([gsl],[main])
+
+
+dnl pkg-config library checks (automated -I, -l/L switches generation and
+dnl PKGCONF_CFLAGS, PKGCONF_LIBS variable creation)
+dnl
+dnl Note: The version numbers used here should match the numbers declared in
+dnl       Debian control file "./dist/debian/control".
+PKG_CHECK_MODULES(PKGCONF, [gdk-2.0 gtk+-2.0 >= 2.12 gsl >= 1.10])
+
 
 
 dnl Checks for header files
@@ -171,18 +186,36 @@ AC_CHECK_HEADER([gsl/gsl_math.h],
                 [AC_MSG_ERROR([You must have installed GNU Scientific Library (GSL) header files])])
 
 
-dnl Checks for typedefs, structures, and compiler characteristics.
+
+dnl Checks for typedefs and structures
+
+
+dnl Checks for compiler characteristics.
 AC_C_CONST
 AC_C_RESTRICT
 AC_C_INLINE
 
 
 dnl Checks for library functions
+
+
+dnl AC_CHECK_FUNCS() uses shell variables LIBS and LDFLAGS for the link in
+dnl sub-function AC_LINK_IFELSE(). Both variables normally are provided by
+dnl AC_CHECK_LIB() and friends. Because PKG_CHECK_MODULES() from pkg-config
+dnl is used here, AC_CHECK_LIB() is not used and so LIBS probably is empty,
+dnl which finally result in an always failing test here.
+LIBS="$PKGCONF_LIBS $LIBS"
+
 AC_CHECK_FUNCS(hypot)
 AC_CHECK_FUNCS(trunc)
 AC_CHECK_FUNCS(round)
 AC_CHECK_FUNCS(exp10)
 AC_CHECK_FUNCS(pow10)
+
+AC_MSG_NOTICE([all functions checked with LIBS = '$LIBS'])
+
+
+dnl Checks for system services
 
 
 AC_OUTPUT
